# ABB

./: .gitignore  README.md
TA-extra-examples/: README.md
TA-extra-examples/Folder Summarizer/: README.md  folder_summarizer.py
TA-extra-examples/example 1 - structuring responses/: example_1-structuring_responses.ipynb  example_1.1-webscraping.py  example_1.3-mirascope.py  pyproject.toml  requirements.txt
email-assistant/: README.md  cli.py  demo_no_api.py  email_agents.py  email_models.py  email_processor.py  env_example.txt  main.py  pyproject.toml  requirements.txt  sample_emails.json
session-1/: README.md  example_1-scrape_job_board.ipynb  example_2-job_dashboard.py  pyproject.toml
session-1/data/: ai_job_data.csv  raw_json_list.jsonl
session-1/live-coding-examples/: ai-job-dashboard.py  ai-job-scraper.ipynb  pyproject.toml  requirements.txt
session-1/live-coding-examples/data/: job_data.csv
session-1_from_start/: README.md  main.py  pyproject.toml
session-2/: README.md  example_1-paper_summarizer.ipynb  example_2-text-classifier.ipynb  example_3-local_visual_QA.ipynb  pyproject.toml  requirements.txt
session-2/data/: emails.csv  emails_transformed.csv
session-3/: README.md  example_1-unstructured_survey_analysis.ipynb  example_2-rag_with_llamaindex.ipynb  example_3-pdf_parsing_docling.ipynb  pyproject.toml  requirements.txt
session-3/articles/: 2023-07-13_A-Practical-Introduction-to-LLMs-65194dda1148.html  2023-07-21_Cracking-Open-the-OpenAI--Python--API-230e4cae7971.html  2023-08-05_Cracking-Open-the-Hugging-Face-Transformers-Library-350aa0ef0161.html  2023-08-25_Prompt-Engineering---How-to-trick-AI-into-solving-your-problems-7ce1ed3b553f.html  2023-09-11_Fine-Tuning-Large-Language-Models--LLMs--23473d763b91.html  2023-09-21_How-to-Build-an-LLM-from-Scratch-8c477768f1f9.html  2024-02-22_QLoRA---How-to-Fine-Tune-an-LLM-on-a-Single-GPU-4e44d6b5be32.html  2024-03-09_How-to-Improve-LLMs-with-RAG-abdc132f76ac.html  2024-03-27_Text-Embeddings--Classification--and-Semantic-Search-8291746220be.html  2024-08-30_Compressing-Large-Language-Models--LLMs--9f406eea5b5e.html  2024-09-26_LLM-Fine-tuning---FAQs-200442827c99.html  2024-10-17_Fine-Tuning-BERT-for-Text-Classification-a01f89b179fc.html
session-3/data/: survey.csv
session-4/: README.md  example_1-youtube_agent.ipynb  example_2-notion-mcp-agent.ipynb  example_3-profile_rewriter_loop.ipynb  functions.py  pyproject.toml
session-4/profiles/: profile-0.txt  profile-1.txt  profile-10.txt  profile-2.txt  profile-3.txt  profile-4.txt  profile-5.txt  profile-6.txt  profile-7.txt  profile-8.txt  profile-9.txt
system-prompt-router/: README.md  cli.py  demo.py  env_example.txt  example_usage.py  main.py  prompt_library.py  prompt_router.py  pyproject.toml  requirements.txt  test_prompt_router.py
youtube-summarizer/: .gitignore  QUICKSTART.md  README.md  app.py  cli.py  core.py  demo.py  example_usage.py  pyproject.toml  test_core.py
