[project]
name = "stock-analysis-dashboard"
version = "1.0.0"
description = "A comprehensive web-based stock analysis dashboard built with Streamlit, yfinance, pandas, and plotly"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AI Builders Bootcamp", email = "your-email@example.com"}
]
keywords = ["stock", "analysis", "finance", "dashboard", "streamlit", "yfinance", "plotly"]

dependencies = [
    "streamlit>=1.28.0",
    "yfinance>=0.2.18",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "numpy>=1.24.0",
]
