[project]
name = "session-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "docling>=2.48.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.6",
    "llama-index>=0.13.3",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-llms-openai>=0.5.4",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openai>=1.102.0",
    "pandas>=2.2.3",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
]
