[project]
name = "session-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "openai>=1.106.1",
    "openai-agents>=0.2.11",
    "python-dotenv>=1.1.1",
    "textstat>=0.7.10",
    "youtube-transcript-api>=1.2.2",
]
