[project]
name = "example-1-structuring-responses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "crawl4ai>=0.7.4",
    "instructor>=1.11.0",
    "mirascope>=1.25.6",
    "openai>=1.102.0",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
]
